// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VizSelectorPanel Should match existing snapshot for initial visualizations. 1`] = `
<div
  className="VizSelectorPanel"
  style={
    Object {
      "width": 450,
    }
  }
>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    defaultValue="Contact Map"
    fluid={true}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    openOnFocus={true}
    options={Array []}
    renderLabel={[Function]}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    wrapSelection={true}
  />
  <Card
    fluid={true}
    raised={true}
  />
</div>
`;

exports[`VizSelectorPanel Should match existing snapshot for initial visualizations. 2`] = `
<div
  className="VizSelectorPanel"
  style={
    Object {
      "width": 450,
    }
  }
>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    defaultValue="Info Panel"
    fluid={true}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    openOnFocus={true}
    options={Array []}
    renderLabel={[Function]}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    wrapSelection={true}
  />
  <Card
    fluid={true}
    raised={true}
  >
    <InfoPanel />
  </Card>
</div>
`;

exports[`VizSelectorPanel Should match existing snapshot for initial visualizations. 3`] = `
<div
  className="VizSelectorPanel"
  style={
    Object {
      "width": 450,
    }
  }
>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    defaultValue="NGL"
    fluid={true}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    openOnFocus={true}
    options={Array []}
    renderLabel={[Function]}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    wrapSelection={true}
  />
  <Card
    fluid={true}
    raised={true}
  />
</div>
`;

exports[`VizSelectorPanel Should match existing snapshot for initial visualizations. 4`] = `
<div
  className="VizSelectorPanel"
  style={
    Object {
      "width": 450,
    }
  }
>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    defaultValue="Spring"
    fluid={true}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    openOnFocus={true}
    options={Array []}
    renderLabel={[Function]}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    wrapSelection={true}
  />
  <Card
    fluid={true}
    raised={true}
  />
</div>
`;

exports[`VizSelectorPanel Should match existing snapshot for initial visualizations. 5`] = `
<div
  className="VizSelectorPanel"
  style={
    Object {
      "width": 450,
    }
  }
>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    defaultValue="TENSOR-T-SNE"
    fluid={true}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    openOnFocus={true}
    options={Array []}
    renderLabel={[Function]}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    wrapSelection={true}
  />
  <Card
    fluid={true}
    raised={true}
  />
</div>
`;

exports[`VizSelectorPanel Should match existing snapshot for initial visualizations. 6`] = `
<div
  className="VizSelectorPanel"
  style={
    Object {
      "width": 450,
    }
  }
>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    defaultValue="T-SNE"
    fluid={true}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    openOnFocus={true}
    options={Array []}
    renderLabel={[Function]}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    wrapSelection={true}
  />
  <Card
    fluid={true}
    raised={true}
  />
</div>
`;

exports[`VizSelectorPanel Should match existing snapshot for initial visualizations. 7`] = `
<div
  className="VizSelectorPanel"
  style={
    Object {
      "width": 450,
    }
  }
>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    defaultValue="T-SNE-FRAME"
    fluid={true}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    openOnFocus={true}
    options={Array []}
    renderLabel={[Function]}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    wrapSelection={true}
  />
  <Card
    fluid={true}
    raised={true}
  />
</div>
`;

exports[`VizSelectorPanel Should match existing snapshot when given no initial visualization. 1`] = `
<div
  className="VizSelectorPanel"
  style={
    Object {
      "width": 450,
    }
  }
>
  <Dropdown
    additionLabel="Add "
    additionPosition="top"
    closeOnBlur={true}
    deburr={false}
    defaultValue="T-SNE"
    fluid={true}
    icon="dropdown"
    minCharacters={1}
    noResultsMessage="No results found."
    onChange={[Function]}
    openOnFocus={true}
    options={Array []}
    renderLabel={[Function]}
    searchInput="text"
    selectOnBlur={true}
    selectOnNavigation={true}
    wrapSelection={true}
  />
  <Card
    fluid={true}
    raised={true}
  />
</div>
`;
